feat: add env variable. * FRAME_COUNT: frame count * WINDOW_WIDTH, WINDOW_HEIGHT: window size * WINDOW_DELAY: window delay * SCHEDULE_DURATION: schedule duration

--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 # OpenCV Config
 PKG_CONFIG_PATH=/opt/homebrew/opt/opencv/lib/pkgconfig
+
+# GUI: detect delay, detection per ${FRAME_COUNT}
+# CLI: loop frame count in schedule job
+FRAME_COUNT=60
+# GUI: detect delay, unit: millisecond
+WINDOW_DELAY=300
+WINDOW_WIDTH=640
+WINDOW_HEIGHT=320
+# schedule duration, unit: second
+SCHEDULE_DURATION=60
