fix: add frame delay option

--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ PKG_CONFIG_PATH=/opt/homebrew/opt/opencv/lib/pkgconfig
 # CLI: loop frame count in schedule job
 FRAME_COUNT=60
 # GUI: detect delay, unit: millisecond
-WINDOW_DELAY=300
+FRAME_DELAY=300
+# GUI: window size
 WINDOW_WIDTH=640
 WINDOW_HEIGHT=320
 # schedule duration, unit: second
